# HKPUG-20260530-data-workshop

./: .gitignore  README.md  main.ipynb  pyproject.toml  train_submission.py
.github/scripts/: score_and_update_leaderboard.py  verify_team_manifest.py
.github/workflows/: run-cleaner.yml  trusted-score.yml  validate-submission-files.yml
data/: test_features.csv  train_features.csv  train_labels.csv
scripts/: encrypt_submission.sh
src/dataclean_workshop/: cleaning.py  train_model.py
submission/: clean.py  manifest.example.json  notes.md
